偏向锁相关测试